spring_security_jwt

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,5 +3,9 @@ server:
 spring:
   application:
     name: pokemon-service
-  datasource:
-    url: jdbc:h2:mem:pokemon
+
+abdelouahed:
+  app:
+    jwtSecret: secretsecreestitsrealllyascrespqsdokqpsjcosqdcrrezkjf
+    jwtExpirationMs: 1800000
+
